--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
   <meta charset="utf-8" />
 
   <title>Caster.io</title>
